Fixed iPad Header issue: page headers were hidden by navigation

--- a/sass/_gabersdorf.scss
+++ b/sass/_gabersdorf.scss
@@ -55,6 +55,10 @@ body
 	.lt-ie9 & {
 		position: relative;
 	}
+
+	@media screen and (max-width: 903px) {
+		padding-top: 8em;
+	}
 }
 
 #header, #content, #navigation, .region-sidebar-first, .region-sidebar-second, #footer {
